# PolyDiM

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md  TODO.txt
PolyDiM/: CMakeLists.txt
PolyDiM/cmake/: PolyDiMConfig.cmake.in
PolyDiM/examples/: CMakeLists.txt
PolyDiM/examples/Brinkman_DF_PCC_2D/: CMakeLists.txt  integration_test.py  main.cpp
PolyDiM/examples/Brinkman_DF_PCC_2D/src/: CMakeLists.txt  assembler.cpp  assembler.hpp  program_configuration.hpp  program_utilities.cpp  program_utilities.hpp  test_definition.hpp
PolyDiM/examples/Elastic_PCC_2D/: CMakeLists.txt  integration_test.py  main.cpp
PolyDiM/examples/Elastic_PCC_2D/src/: CMakeLists.txt  assembler.cpp  assembler.hpp  local_space.cpp  local_space.hpp  program_configuration.hpp  program_utilities.cpp  program_utilities.hpp  test_definition.hpp
PolyDiM/examples/Elliptic_2D/: CMakeLists.txt
PolyDiM/examples/Elliptic_2D/src/: CMakeLists.txt
PolyDiM/examples/Elliptic_MCC_2D/: CMakeLists.txt  integration_test.py  main.cpp
PolyDiM/examples/Elliptic_MCC_2D/src/: CMakeLists.txt  assembler.cpp  assembler.hpp  local_space.cpp  local_space.hpp  program_configuration.hpp  program_utilities.cpp  program_utilities.hpp  test_definition.hpp
PolyDiM/examples/Elliptic_MCC_3D/: CMakeLists.txt  integration_test.py  main.cpp
PolyDiM/examples/Elliptic_MCC_3D/src/: CMakeLists.txt  assembler.cpp  assembler.hpp  program_configuration.hpp  program_utilities.cpp  program_utilities.hpp  test_definition.hpp
PolyDiM/examples/Elliptic_PCC_1D/: CMakeLists.txt  integration_test.py  main.cpp
PolyDiM/examples/Elliptic_PCC_1D/src/: CMakeLists.txt  assembler.cpp  assembler.hpp  program_configuration.hpp  program_utilities.cpp  program_utilities.hpp  test_definition.hpp
PolyDiM/examples/Elliptic_PCC_2D/: CMakeLists.txt  integration_test.py  main.cpp
PolyDiM/examples/Elliptic_PCC_2D/src/: CMakeLists.txt  assembler.cpp  assembler.hpp  local_space.cpp  local_space.hpp  program_configuration.hpp  program_utilities.cpp  program_utilities.hpp  test_definition.hpp
PolyDiM/examples/Elliptic_PCC_3D/: CMakeLists.txt  integration_test.py  main.cpp  program_macro.hpp.in
PolyDiM/examples/Elliptic_PCC_3D/src/: CMakeLists.txt  assembler.cpp  assembler.hpp  local_space.cpp  local_space.hpp  program_configuration.hpp  program_macro.hpp  program_utilities.cpp  program_utilities.hpp  test_definition.hpp  test_definition.hpp.autosave
PolyDiM/examples/Elliptic_PCC_BulkFace_2D/: CMakeLists.txt  main.cpp
PolyDiM/examples/Elliptic_PCC_BulkFace_2D/src/: CMakeLists.txt  assembler.cpp  assembler.hpp  program_configuration.hpp  program_utilities.cpp  program_utilities.hpp  test_definition.hpp
PolyDiM/examples/NavierStokes_DF_PCC_2D/: CMakeLists.txt  integration_test.py  main.cpp
PolyDiM/examples/NavierStokes_DF_PCC_2D/src/: CMakeLists.txt  assembler.cpp  assembler.hpp  program_configuration.hpp  program_utilities.cpp  program_utilities.hpp  test_definition.hpp
PolyDiM/examples/Parabolic_PCC_2D/: CMakeLists.txt  integration_test.py  main.cpp
PolyDiM/examples/Parabolic_PCC_2D/src/: CMakeLists.txt  assembler.cpp  assembler.hpp  program_configuration.hpp  program_utilities.cpp  program_utilities.hpp  test_definition.hpp
PolyDiM/examples/Parabolic_PCC_BulkFace_2D/: CMakeLists.txt  integration_test.py  main.cpp
PolyDiM/examples/Parabolic_PCC_BulkFace_2D/src/: CMakeLists.txt  assembler.cpp  assembler.hpp  program_configuration.hpp  program_utilities.cpp  program_utilities.hpp  test_definition.hpp
PolyDiM/examples/SUPG_PCC_2D/: CMakeLists.txt  main.cpp
PolyDiM/examples/SUPG_PCC_2D/src/: CMakeLists.txt  assembler.cpp  assembler.hpp  program_configuration.hpp  program_utilities.cpp  program_utilities.hpp  test_definition.hpp
PolyDiM/examples/Stokes_DF_PCC_2D/: CMakeLists.txt  main.cpp
PolyDiM/examples/Stokes_DF_PCC_2D/src/: CMakeLists.txt  assembler.cpp  assembler.hpp  program_configuration.hpp  program_utilities.hpp  test_definition.hpp
PolyDiM/examples/Stokes_DF_PCC_3D/: CMakeLists.txt  integration_test.py  main.cpp
PolyDiM/examples/Stokes_DF_PCC_3D/src/: CMakeLists.txt  assembler.cpp  assembler.hpp  program_configuration.hpp  program_utilities.cpp  program_utilities.hpp  test_definition.hpp
PolyDiM/src/: CMakeLists.txt
PolyDiM/src/Common/: CMakeLists.txt  Polydim_Macro.in
PolyDiM/src/FEM/PCC/: CMakeLists.txt
PolyDiM/src/Interpolation/: CMakeLists.txt  lagrange_1D.cpp  lagrange_1D.hpp
PolyDiM/src/PDETools/: CMakeLists.txt
PolyDiM/src/PDETools/Assembler/: Assembler_Utilities.hpp  CMakeLists.txt  assembler_PCC_2D_functions.cpp  assembler_PCC_2D_functions.hpp  assembler_PCC_2D_functions_data.hpp  assembler_PCC_2D_functions_utilities.cpp  assembler_PCC_2D_functions_utilities.hpp
PolyDiM/src/PDETools/DOFs/: CMakeLists.txt  DOFsManager.cpp  DOFsManager.hpp
PolyDiM/src/PDETools/Equations/: CMakeLists.txt  EllipticEquation.hpp
PolyDiM/src/PDETools/LocalSpace/: CMakeLists.txt  LocalSpace_DF_PCC_2D.cpp  LocalSpace_DF_PCC_2D.hpp  LocalSpace_MCC_2D.cpp  LocalSpace_MCC_2D.hpp  LocalSpace_PCC_2D.cpp  LocalSpace_PCC_2D.hpp  LocalSpace_PCC_3D.cpp  LocalSpace_PCC_3D.hpp
PolyDiM/src/PDETools/Mesh/: CMakeLists.txt  MeshMatricesDAO_mesh_connectivity_data.cpp  MeshMatricesDAO_mesh_connectivity_data.hpp  PDE_Mesh_Generation.hpp  PDE_Mesh_Utilities.cpp  PDE_Mesh_Utilities.hpp
PolyDiM/src/Utilities/: CMakeLists.txt  GBasis_2D.cpp  GBasis_2D.hpp  GBasis_3D.cpp  GBasis_3D.hpp  GBasis_Data.hpp  Inertia_Utilities.cpp  Inertia_Utilities.hpp  Monomials_1D.cpp  Monomials_1D.hpp  Monomials_2D.cpp  Monomials_2D.hpp  Monomials_3D.cpp  Monomials_3D.hpp  Monomials_Data.hpp  Monomials_Utilities.hpp
PolyDiM/src/VEM/: CMakeLists.txt
PolyDiM/src/VEM/DF_PCC/: CMakeLists.txt  VEM_DF_PCC_PerformanceAnalysis.hpp  VEM_DF_PCC_Utilities.cpp  VEM_DF_PCC_Utilities.hpp
PolyDiM/src/VEM/MCC/: CMakeLists.txt  VEM_MCC_PerformanceAnalysis.hpp  (+4 more)
PolyDiM/src/ZFEM/: CMakeLists.txt
PolyDiM/test/: CMakeLists.txt  main.cpp
PolyDiM/test/PDETools/: CMakeLists.txt
PolyDiM/test/VEM/: CMakeLists.txt
PolyDiM/test/ZFEM/: CMakeLists.txt
(+389 files in other folders)
